c/src/test/resources/c/test/nec_bnc/invalid/inf2.ctrl
<controlFile>
  <sourceFile name="../inf2.c" id="1" />
  <run>
    <startPosition fileId="1" line="43" />
    <wayPoint fileId="1" line="45" >
      <command>
	<cascadeFunction>cascade_assume</cascadeFunction>
	<argument><![CDATA[
	a > 0 && b > 0
	]]>
	</argument>
      </command>
    </wayPoint>
    <wayPoint fileId="1" line="48" >
      <function funcName="st_alloc" >
	<wayPoint fileId="1" line="14" >
	  <command>
	    <cascadeFunction>cascade_check</cascadeFunction>
	    <argument><![CDATA[
	    valid(&t->x) && valid(&t->y) && valid(&t->z)
	    ]]>
	    </argument>
	  </command>
	</wayPoint>
      </function>
    </wayPoint>
    <wayPoint fileId="1" line="50" >
      <function funcName="st_alloc" >
	<wayPoint fileId="1" line="19" >
	  <command>
	    <cascadeFunction>cascade_check</cascadeFunction>
	    <argument><![CDATA[
	    valid(&t->x) && valid(&t->y) && valid(&t->z)
	    ]]>
	    </argument>
	  </command>
	</wayPoint>
      </function>
    </wayPoint>
    <wayPoint fileId="1" line="53" >
      <function funcName="st_compact" >
	<wayPoint fileId="1" line="27" >
	  <command>
	    <cascadeFunction>cascade_check</cascadeFunction>
	    <argument><![CDATA[
	    valid(st1) && valid(st2) &&
	    valid(&st1->x) && valid(&st1->y) && valid(&st1->z) &&
	    valid(&st2->x) && valid(&st2->y) && valid(&st2->z)
	    ]]>
	    </argument>
	  </command>
	</wayPoint>
	<wayPoint fileId="1" line="39" />
      </function>
    </wayPoint>
    <endPosition fileId="1" line="54" />
  </run>
</controlFile>
